--- a/examples/lorenz/train_lorenz.ipynb
+++ b/examples/lorenz/train_lorenz.ipynb
@@ -15,7 +15,8 @@
     "from example_lorenz import get_lorenz_data\n",
     "from sindy_utils import library_size\n",
     "from training import train_network\n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "tf.compat.v1.disable_v2_behavior() "
    ]
   },
   {
@@ -72,7 +73,7 @@
     "\n",
     "# loss function weighting\n",
     "params['loss_weight_decoder'] = 1.0\n",
-    "params['loss_weight_sindy_z'] = 0.0\n",
+    "params['loss_weight_sindy_z'] = 0.0 # WHAT???\n",
     "params['loss_weight_sindy_x'] = 1e-4\n",
     "params['loss_weight_sindy_regularization'] = 1e-5\n",
     "\n",
