--- a/examples/lorenz/analyze_lorenz_model2.ipynb
+++ b/examples/lorenz/analyze_lorenz_model2.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "//anaconda/envs/py3/lib/python3.6/site-packages/h5py/__init__.py:34: FutureWarning: Conversion of the second argument of issubdtype from `float` to `np.floating` is deprecated. In future, it will be treated as `np.float64 == np.dtype(float).type`.\n",
-      "  from ._conv import register_converters as _register_converters\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"../../src\")\n",
@@ -27,7 +18,7 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import tensorflow as tf\n",
-    "tf.compat.v1.disable_v2_behavior() \n",
+    "#tf.compat.v1.disable_v2_behavior() \n",
     "%matplotlib inline"
    ]
   },
@@ -37,10 +28,35 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From ../../src\\autoencoder.py:28: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "\n",
+      "WARNING:tensorflow:From ../../src\\autoencoder.py:194: The name tf.get_variable is deprecated. Please use tf.compat.v1.get_variable instead.\n",
+      "\n",
+      "WARNING:tensorflow:\n",
+      "The TensorFlow contrib module will not be included in TensorFlow 2.0.\n",
+      "For more information, please see:\n",
+      "  * https://github.com/tensorflow/community/blob/master/rfcs/20180907-contrib-sunset.md\n",
+      "  * https://github.com/tensorflow/addons\n",
+      "  * https://github.com/tensorflow/io (for I/O related ops)\n",
+      "If you depend on functionality not listed there, please file an issue.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\local_user\\AppData\\Local\\Temp\\ipykernel_16964\\219835632.py:8: The name tf.train.Saver is deprecated. Please use tf.compat.v1.train.Saver instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\local_user\\AppData\\Local\\Temp\\ipykernel_16964\\219835632.py:8: The name tf.get_collection is deprecated. Please use tf.compat.v1.get_collection instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\local_user\\AppData\\Local\\Temp\\ipykernel_16964\\219835632.py:8: The name tf.GraphKeys is deprecated. Please use tf.compat.v1.GraphKeys instead.\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "data_path = os.getcwd() + '/'\n",
-    "save_name = 'model2'\n",
+    "save_name = 'lorenz_2025_exp0'\n",
     "params = pickle.load(open(data_path + save_name + '_params.pkl', 'rb'))\n",
     "params['save_name'] = data_path + save_name\n",
     "\n",
@@ -87,7 +103,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from ./models_lorenz/model2\n"
+      "WARNING:tensorflow:From C:\\Users\\local_user\\AppData\\Local\\Temp\\ipykernel_16964\\4239406635.py:1: The name tf.Session is deprecated. Please use tf.compat.v1.Session instead.\n",
+      "\n",
+      "WARNING:tensorflow:From C:\\Users\\local_user\\AppData\\Local\\Temp\\ipykernel_16964\\4239406635.py:2: The name tf.global_variables_initializer is deprecated. Please use tf.compat.v1.global_variables_initializer instead.\n",
+      "\n",
+      "INFO:tensorflow:Restoring parameters from c:\\Users\\local_user\\Desktop\\Study\\VII_semester\\DIL\\Codes\\SindyAutoencoders\\examples\\lorenz/lorenz_2025_exp0\n"
      ]
     }
    ],
@@ -530,7 +550,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "tf1-sindy",
    "language": "python",
    "name": "python3"
   },
@@ -544,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.12"
   },
   "toc": {
    "base_numbering": 1,
