plots for figures of models

--- a/examples/lorenz/alma.ipynb
+++ b/examples/lorenz/alma.ipynb
@@ -14,17 +14,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "841f8fe7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(3,)"
+       "(2, 37)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,9 +32,10 @@
    "source": [
     "import pickle\n",
     "\n",
-    "with open(\"experiment_results_202512100922.pkl\", \"rb\") as f:\n",
+    "with open(\"experiment_results_202512102142.pkl\", \"rb\") as f:\n",
     "    data = pickle.load(f)\n",
-    "df = pd.DataFrame(data)\n"
+    "df = pd.DataFrame(data)\n",
+    "df.shape"
    ]
   },
   {
@@ -112,11 +113,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
+   "id": "8202d643",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.340170\n",
+       "1    0.953104\n",
+       "Name: loss_sindy, dtype: float32"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loss_sindy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "4846ff00",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df.to_csv(\"experiment_results_202512102142.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
