--- a/examples/lorenz/analyze_lorenz_model2.ipynb
+++ b/examples/lorenz/analyze_lorenz_model2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +18,12 @@
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import tensorflow as tf\n",
-    "#tf.compat.v1.disable_v2_behavior() \n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -57,10 +56,10 @@
    "source": [
     "data_path = os.getcwd() + '/'\n",
     "save_name = 'lorenz_2025_exp0'\n",
-    "params = pickle.load(open(data_path + save_name + '_params.pkl', 'rb'))\n",
+    "params = pickle.load(open(data_path + save_name + '_params.pkl', 'rb')) # loads the _params.pkl file, which contains the hyperparameters\n",
     "params['save_name'] = data_path + save_name\n",
     "\n",
-    "autoencoder_network = full_network(params)\n",
+    "autoencoder_network = full_network(params) # restores the specific network from teh autoencoder architecture using the hyperparams from _params.pkl\n",
     "learning_rate = tf.placeholder(tf.float32, name='learning_rate')\n",
     "saver = tf.train.Saver(var_list=tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES))\n",
     "\n",
@@ -96,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -112,9 +111,9 @@
     }
    ],
    "source": [
-    "with tf.Session() as sess:\n",
-    "    sess.run(tf.global_variables_initializer())\n",
-    "    saver.restore(sess, data_path + save_name)\n",
+    "with tf.Session() as sess: # TensorFlow stuff used to reload network\n",
+    "    sess.run(tf.global_variables_initializer()) # random init of weights in the network\n",
+    "    saver.restore(sess, data_path + save_name) # overwrites random inits of weights using f\"{data_path + save_name}.data-00000-of-00001\" and f\"{data_path + save_name}.index\" files\n",
     "    test_dictionary = create_feed_dictionary(test_data, params)\n",
     "    tf_results = sess.run(tensorflow_run_tuple, feed_dict=test_dictionary)\n",
     "\n",
