--- a/examples/lorenz/lorenz_consistency.ipynb
+++ b/examples/lorenz/lorenz_consistency.ipynb
@@ -43,6 +43,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 2, 2, 3)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tup_vec = [(1, 2), (2, 3)]\n",
+    "alma = tuple(tup for )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
